# live-stock-app

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily-email.yml
data/: analysis_2026-04-27.md  recommendations_2026-04-27.md  watchlist.json.example
scripts/: daily_email.py
src/: cli.py  scheduler.py
src/analysis/: forecast.py  fundamental.py  historical_metrics.py  news.py  technical.py
src/api/: csv_import.py  discover.py  main.py
src/auth/: kite_auth.py  token_store.py
src/client/: kite_client.py  models.py
src/data/: company_info.py  http.py  news_provider.py  news_sources.py  universe.py  yf_provider.py
src/data/fundamentals/: __init__.py  moneycontrol_source.py  screener_source.py  tickertape_source.py  yf_source.py
src/data/macro/: __init__.py  llm_gemini.py  themes.py
src/data/smart_money/: __init__.py  bulk_deals_source.py  events_source.py  insider_source.py
src/mcp_server/: server.py
src/recommendation/: engine.py  report.py
src/storage/: holdings_store.py
web/: angular.json  package-lock.json  package.json
web/src/: index.html  styles.scss
web/src/app/: api.service.ts  app.component.ts  app.routes.ts  models.ts
web/src/app/discover/: discover.component.ts
web/src/app/macro/: macro.component.ts
web/src/app/portfolio/: portfolio.component.ts
web/src/app/recommendations/: recommendations.component.ts
